[gd_scene load_steps=6 format=3 uid="uid://dojpx24r227o0"]

[ext_resource type="Script" path="res://Scenes/michiRun/Scripts/MichiRun.gd" id="1_lh3ho"]
[ext_resource type="Texture2D" uid="uid://blv5qr387wde2" path="res://GUI/Assets/bg-store.png" id="1_ueypi"]
[ext_resource type="PackedScene" uid="uid://c5m6bw6qmw8hf" path="res://Scenes/michiRun/floor.tscn" id="3_oy1kh"]
[ext_resource type="PackedScene" uid="uid://bik6ywrptyw0d" path="res://GUI/PlayAgainChromeGame.tscn" id="5_b2m4n"]

[sub_resource type="LabelSettings" id="LabelSettings_fuwfy"]
font_size = 32
font_color = Color(0.0156863, 1, 0, 1)

[node name="michiRun" type="Node2D"]
script = ExtResource("1_lh3ho")
metadata/_edit_horizontal_guides_ = [427.0]
metadata/_edit_vertical_guides_ = [241.0]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(450, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(270.75, 443)
scale = Vector2(12.9844, 28.625)
texture = ExtResource("1_ueypi")

[node name="Floor" parent="." instance=ExtResource("3_oy1kh")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(240, 427)

[node name="Control" parent="Camera2D" instance=ExtResource("5_b2m4n")]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 19.0
offset_right = 1.0
offset_bottom = 19.0

[node name="Score" type="Label" parent="Camera2D"]
offset_left = -237.0
offset_top = -424.0
offset_right = -112.0
offset_bottom = -357.0
label_settings = SubResource("LabelSettings_fuwfy")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="Camera2D"]
offset_left = 111.0
offset_top = -424.0
offset_right = 236.0
offset_bottom = -357.0
label_settings = SubResource("LabelSettings_fuwfy")
horizontal_alignment = 1

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
